<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2014 Jakob Wenzel, Ramon Wirsch.
  ~
  ~ This file is part of RallyeSoft.
  ~
  ~ RallyeSoft is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ RallyeSoft is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with RallyeSoft. If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>

	<string name="app_name">RallyeSoft</string>
	<string name="dash_menu">Menu</string>
	<string name="overview">Overview</string>
	<string name="unsupported_link">Not supported function!</string>
	<string name="send">Send</string>
	<string name="picture_taken">Picture taken!</string>
	<string name="map">Map</string>
	<string name="overview_welcome">Welcome to RallyeSoft</string>
	<string name="login">Login</string>
	<string name="logout">Logout</string>
	<string name="take_picture">Take Picture</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="configuration">Configuration</string>
	<string name="server">Server</string>
	<string name="group">Groupnumber</string>
	<string name="name">Name</string>
	<string name="password">Password</string>
	<string name="status">Status</string>
	<string name="unavailable">Unavailable</string>
	<string name="connected">Connected</string>
	<string name="notConnected">Disconnected</string>
	<string name="refresh">Refresh</string>
	<string name="image_viewer">Image Viewer</string>
	<string name="image_level">Picture-Size</string>
	<string name="image_level_large">Fullsize</string>
	<string name="image_level_small">Compressed</string>
	<string name="select_take_picture">Take or choose a picture</string>
	<string name="invalid">Invalid</string>
	<string name="share_barcode">Share Barcode</string>
	<string name="scan_barcode">Scan Barcode</string>
	<string name="center">Center</string>
	<string name="next">Next</string>
	<string name="back">Back</string>
	<string name="connection_assistant">Connection-Assistent</string>
	<string name="invalid_url">Invalid URL</string>
	<string name="invalid_server">Server not responding!</string>
	<string name="invalid_login">Invalid login</string>
	<string name="finish">Finish</string>
	<string name="assistant_choose_server">Select a server</string>
	<string name="test_server">Test connection</string>
	<string name="assistant_choose_name">Username</string>
	<string name="assistant_group_password">Group password</string>
	<string name="invalid_username">Username invalid / empty / to short</string>
	<string name="invalid_password">Password invalid / empty / to short</string>
	<string name="uploading">Upload</string>
	<string name="upload_complete">Upload complete</string>
	<string name="need_connection">This function needs an active connection</string>
	<string name="welcome_msg">Welcome to Rallyesoft.\nPlease use the Connection-Assistant to connect to a Rallye-Server\n\nMany functions of this App will only be available after a successful connection!</string>
	<string name="connection_failure">Connection failed</string>
	<string name="ssl">SSL</string>
	<string name="port">Port</string>
	<string name="path">Path</string>
	<string name="chat_post_failure">Posting of chat failed</string>
	<string name="locspecific_tasks">Location specific Tasks</string>
	<string name="ubiquitous_tasks">Ubiquitous Tasks</string>
	<string name="resize">Switch size</string>
	<string name="welcome">Welcome</string>
	<string name="tasks">Tasks</string>
	<string name="next_move">Next move</string>
	<string name="chat">Chat</string>
	<string name="no_nodes">No Nodes to center on!</string>
	<string name="of">of</string>
	<string name="menu_drawer_open">Open drawer menu</string>
	<string name="menu_drawer_close">Close drawer menu</string>
	<string name="reconnect">Reconnect</string>
	<string name="description">Description</string>
	<string name="version">Version</string>
	<string name="submissions">Submissions</string>
	<string name="new_message">New message</string>
	<string name="new_messages">New messages</string>
	<string name="x_new_messages">new messages</string>
	<string name="new_messages_in">New messages in</string>
	<string name="x_new_messages_in_y_chatrooms">%1$d messages in %2$d chatrooms</string>
	<string name="waiting_for_model">Waiting for connection...</string>
	<string name="solution_submitted">Solution submitted (1/1)</string>
	<string name="solutions_submitted">Solution submitted (further solutions possible)</string>
	<string name="no_solution_submitted">No solutions submitted</string>
	<string name="solution_state_unknown">Solution status unknown</string>
	<string name="apply">Apply</string>
	<string name="test_server_connection">Test server connection</string>
	<string name="connection_test_failed">Connection test failed! Please review the configuration</string>
	<string name="about">About...</string>
	<string name="concept_by">Concept by</string>
	<string name="code_by">Code by</string>
	<string name="code_available_at">Code available at</string>
	<string name="libraries_used">Libraries used</string>
	<string translatable="false" name="about_concept">Felix Hübner\nRamon Wirsch</string>
	<string translatable="false" name="about_code">Jakob Wenzel\nRamon Wirsch</string>
	<string translatable="false" name="about_github">Server: <a href="https://github.com/antidau/rallye-server">GitHub</a>\nAndroid-Client: <a href="https://github.com/antidau/rallye-android-client">GitHub</a></string>
	<string translatable="false" name="about_libraries"><a href="https://github.com/nostra13/Android-Universal-Image-Loader">Universal Image Loader</a> © 2011-2013, by Sergey Tarasevich\n<a href="http://actionbarsherlock.com">ActionBarSherlock</a>, by Jake Wharton\n<a href="https://github.com/JakeWharton/Android-ViewPagerIndicator">ViewPagerIndicator</a>, by Jake Wharton\n<a href="https://github.com/astuetz/PagerSlidingTabStrip">PagerSlidingTabStrip</a>, by Andreas Stuetz</string>
	<string name="submit_new_solution">Submit solution</string>
	<string name="enter_text">Enter text:</string>
	<string name="enter_number">Enter number:</string>
	<string name="choose_picture">Choose picture:</string>
	<string name="picture_selection_failed">Internal error during picture selection!</string>
	<string name="unread_from_here_on">Unread from her on</string>
	<string name="auto_upload">Automatic Upload</string>
	<string name="auto_upload_on_summ">Start uploading pictures as soon as they are taken (when the camera UI exits)</string>
	<string name="auto_upload_off_summ">Start uploading pictures on \'Send\'</string>
	<string name="settings">Settings</string>
	<string name="data_transfer">Data Transfer</string>
	<string name="connecting">Connecting...</string>
	<string name="export_barcode_error">Failed to export login as barcode...</string>
	<string name="loading_groups">Please wait while loading available groups</string>
	<string name="password_incorrect_try_again">Password was incorrect, please try again</string>
	<string name="password_retry">Enter password</string>
	<string name="retry">Retry login</string>
	<string name="confirm_force_refresh">Are you sure? This will delete all current data. The app will try to refresh the data, but until then certain functions may not be available...</string>
	<string name="troubleshooting">Troubleshooting</string>
	<string name="force_refresh_mapconfig">Force refresh map configuration</string>
	<string name="force_refresh_chatrooms">Force refresh the available chatrooms</string>
	<string name="upload_pictures_metered">Metered uploads</string>
	<string name="upload_pictures_metered_summary">Allow picture upload over metered connections</string>
	<string name="upload_pictures_slow">Slow uploads</string>
	<string name="upload_pictures_slow_summary">Allow picture uploads over slow metered connections like Edge or GPRS</string>
	<string name="upload_small_version">Upload preview</string>
	<string name="upload_small_version_summary">Upload a preview on metered connections, original only on Wifi</string>
	<string name="default_picture_download_size">Default picture size</string>
	<string name="default_picture_download_size_summary">The default size of pictures in the gallery</string>
	<string name="upload_failed">Upload failed</string>
	<string name="original_file_uploads">Original picture uploads</string>
	<string name="upload_overview">Upload Overview</string>
	<string name="are_you_sure">Are you really sure?</string>
	<string name="picture_no_x">Picture No %d</string>
	<string name="unknown">Unknown</string>
	<string name="submission">Submission</string>
	<string name="no_valid_login">No valid login found</string>

</resources>