<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2014 Jakob Wenzel, Ramon Wirsch.
  ~
  ~ This file is part of RallyeSoft.
  ~
  ~ RallyeSoft is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Foobar is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with RallyeSoft. If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
	<PreferenceCategory android:title="@string/data_transfer">
		<SwitchPreference
			android:defaultValue="true"
			android:key="auto_upload"
			android:summaryOff="@string/auto_upload_off_summ"
			android:summaryOn="@string/auto_upload_on_summ"
			android:title="@string/auto_upload" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/troubleshooting">
		<de.stadtrallye.rallyesoft.widget.ForceRefreshPreference android:title="@string/force_refresh_mapconfig" app:target="map_config" />
		<de.stadtrallye.rallyesoft.widget.ForceRefreshPreference android:title="@string/force_refresh_chatrooms" app:target="available_chatrooms" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/app_name">
		<de.stadtrallye.rallyesoft.widget.AboutPreference android:title="@string/about" />
	</PreferenceCategory>
</PreferenceScreen>