<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2014 Jakob Wenzel, Ramon Wirsch.
  ~
  ~ This file is part of RallyeSoft.
  ~
  ~ RallyeSoft is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Foobar is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with RallyeSoft. If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="8dp">


	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:text="@string/concept_by" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/about_concept"
		android:layout_marginLeft="16dp"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:text="@string/code_by" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/about_code"
		android:layout_marginLeft="16dp"
		android:linksClickable="true"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:text="@string/code_available_at" />

	<TextView
		android:id="@+id/about_github"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/about_github"
		android:layout_marginLeft="16dp"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:text="@string/libraries_used" />

	<TextView
		android:id="@+id/about_libs"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/about_libraries"
		android:layout_marginLeft="16dp"/>

</LinearLayout>