<!--
  ~ Copyright (c) 2014 Jakob Wenzel, Ramon Wirsch.
  ~
  ~ This file is part of RallySoft.
  ~
  ~ RallyeSoft is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Foobar is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Foobar.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item android:id="@+id/menu_login"
        android:title="@string/connection_assistant"
        android:showAsAction="collapseActionView" />
    
    <item android:id="@+id/menu_logout"
        android:title="@string/logout"
        android:showAsAction="collapseActionView" />

	<item android:id="@+id/menu_reconnect"
		  android:title="@string/reconnect"
		  android:showAsAction="collapseActionView" />
    
    <item android:id="@+id/menu_share_barcode"
        android:title="@string/share_barcode"
        android:showAsAction="collapseActionView" />

	<item android:id="@+id/menu_about"
		android:title="@string/about"
		android:showAsAction="collapseActionView" />
    
</menu>
