<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2014 Jakob Wenzel, Ramon Wirsch.
  ~
  ~ This file is part of RallyeSoft.
  ~
  ~ RallyeSoft is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Foobar is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with RallyeSoft. If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:orientation="vertical"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:padding="16dp">

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/assistant_choose_name"
			android:layout_gravity="left|center_vertical"/>

	<EditText
			android:id="@+id/name"
			android:inputType="textPersonName"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/name"
			android:layout_marginTop="16dp"/>

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/assistant_group_password"
			android:layout_gravity="left|center_vertical"
			android:id="@+id/textView"
			android:layout_marginTop="32dp"/>

	<EditText
			android:id="@+id/pass"
			android:inputType="textPassword"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:imeOptions="actionSend"
			android:hint="@string/password"
			android:layout_marginTop="16dp"/>

	<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/next"
			android:layout_gravity="right"
			android:text="@string/next"
			android:layout_marginTop="16dp"/>
</LinearLayout>