<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:padding="16dp">

	<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textSize="20sp"
			android:textStyle="bold"
			android:text="@string/connected"
			android:layout_alignParentTop="true"
			android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true"
			android:layout_alignParentBottom="false"
			android:id="@+id/textView"/>

	<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/next"
			android:text="@string/apply"
			android:enabled="false"
			android:layout_alignParentRight="true"
			android:layout_marginTop="16dp"
			android:layout_below="@+id/textView"/>

	<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/cancel"
			android:text="@string/cancel"
			android:layout_toLeftOf="@+id/next"
			android:layout_alignTop="@+id/next"
			android:layout_marginRight="16dp"/>

</RelativeLayout>