<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2014 Jakob Wenzel, Ramon Wirsch.
  ~
  ~ This file is part of RallyeSoft.
  ~
  ~ RallyeSoft is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ RallyeSoft is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with RallyeSoft. If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:clickable="true"
	android:padding="8dp">



    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
		android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/overview_welcome"
        />

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:text="@string/server"
			android:layout_gravity="left|center_vertical"
			android:layout_marginTop="8dp"/>

	<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			tools:text="server name"
			android:id="@+id/server_name"
			android:layout_marginTop="8dp"/>

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:text="@string/description"
			android:layout_marginTop="8dp"/>

	<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			tools:text="This should contain a short description of the current server"
			android:id="@+id/server_desc"
			android:layout_marginTop="8dp"/>

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:text="@string/version"
			android:layout_marginTop="8dp"/>

	<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			tools:text="server v 1.2.3.4"
			android:id="@+id/server_ver"
			android:layout_marginTop="8dp"/>

	<TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/status"
		android:layout_marginTop="8dp"/>

	<TextView
		android:id="@+id/server_status"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		tools:text="Custom info from server"
		android:layout_marginTop="8dp"/>

</LinearLayout>