<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:id="@+id/scrollView">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="16dp">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/assistant_choose_server"
			android:id="@+id/textView"/>

		<Spinner
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/protocol"
			android:layout_marginTop="16dp"
			android:layout_alignParentLeft="true"
			android:layout_below="@+id/textView"
			android:entries="@array/protocols"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:text="@string/server"
			android:id="@+id/textViewServer"
			android:layout_alignParentLeft="true"
			android:layout_alignBaseline="@+id/server"/>

		<EditText
			android:id="@+id/server"
			android:inputType="textUri"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:layout_marginTop="16dp"
			android:layout_below="@+id/protocol"
			android:layout_alignParentRight="true"
			android:layout_alignParentLeft="false"
			android:layout_toRightOf="@+id/textViewServer"
			android:layout_marginLeft="16dp"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:text="@string/port"
			android:id="@+id/textViewPort"
			android:layout_alignParentLeft="true"
			android:layout_alignBaseline="@+id/port"
			android:layout_alignRight="@+id/textViewServer"/>

		<EditText
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:inputType="number"
			android:id="@+id/port"
			android:layout_marginTop="16dp"
			android:layout_below="@+id/server"
			android:layout_toRightOf="@+id/textViewPort"
			android:layout_alignParentRight="true"
			android:layout_marginLeft="16dp"
			android:focusable="true"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:text="@string/path"
			android:id="@+id/textViewPath"
			android:layout_alignParentLeft="true"
			android:layout_alignBaseline="@+id/path"
			android:layout_alignRight="@+id/textViewServer"/>

		<EditText
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:inputType="text"
			android:id="@+id/path"
			android:layout_below="@+id/port"
			android:imeOptions="actionSend"
			android:layout_marginTop="16dp"
			android:layout_alignParentRight="true"
			android:layout_toRightOf="@+id/textViewPath"
			android:layout_marginLeft="16dp"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/test_server"
			android:id="@+id/test"
			android:layout_below="@+id/path"
			android:layout_alignParentRight="true"
			android:layout_marginTop="16dp"/>

		<FrameLayout
			android:id="@+id/info_manager"
			android:layout_marginTop="32dp"
			android:layout_below="@+id/test"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@android:drawable/editbox_background_normal">

			<RelativeLayout
				android:id="@+id/server_info"
				android:layout_margin="16dp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<ImageView
					android:layout_width="64dp"
					android:layout_height="64dp"
					android:id="@+id/server_image"
					android:layout_alignParentTop="true"
					android:layout_alignParentLeft="true"/>

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:id="@+id/server_name"
					android:layout_alignParentRight="true"
					android:layout_toRightOf="@+id/server_image"
					android:layout_marginLeft="16dp"
					android:gravity="center_vertical"
					android:layout_alignTop="@+id/server_image"
					android:layout_alignBottom="@+id/server_image"
					android:layout_alignParentTop="false"/>

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/server_desc"
					android:layout_marginTop="16dp"
					android:layout_below="@+id/server_image"
					android:layout_alignParentLeft="true"
					android:layout_alignParentRight="true"
					android:layout_alignParentBottom="true"/>
			</RelativeLayout>

			<LinearLayout
				android:id="@+id/loading"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:layout_margin="16dp">

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:text="@string/test_server_connection"
					android:gravity="center_horizontal"
					android:textColor="@color/text_grey"/>

				<ProgressBar
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:layout_marginTop="8dp"/>

			</LinearLayout>
		</FrameLayout>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/next"
			android:id="@+id/next"
			android:layout_gravity="right"
			android:layout_marginTop="16dp"
			android:layout_below="@+id/info_manager"
			android:layout_alignParentRight="true"/>

	</RelativeLayout>

</ScrollView>