<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2014 Jakob Wenzel, Ramon Wirsch.
  ~
  ~ This file is part of RallyeSoft.
  ~
  ~ RallyeSoft is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ RallyeSoft is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with RallyeSoft. If not, see <http://www.gnu.org/licenses/>.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:padding="16dp">



	<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textSize="20sp"
			android:textStyle="bold"
			android:text="@string/connected"
			android:layout_alignParentTop="true"
			android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true"
			android:layout_alignParentBottom="false"
			android:id="@+id/textView"/>

	<ProgressBar
		android:id="@+id/progress"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/textView"
		android:layout_centerHorizontal="true"
		android:indeterminate="true"/>

	<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/next"
			android:text="@string/finish"
			android:enabled="false"
			android:layout_alignParentRight="true"
			android:layout_marginTop="16dp"
			android:layout_below="@+id/progress"/>

	<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/cancel"
			android:text="@string/cancel"
			android:layout_toLeftOf="@+id/next"
			android:layout_alignTop="@+id/next"
			android:layout_marginRight="16dp"/>

</RelativeLayout>